--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Server for Gingko 2 web.",
   "main": "index.js",
   "scripts": {
-    "start": "npx tsc -w & nodemon dist/index.js",
+    "start2": "npx tsc -w & nodemon index.js",
+    "start": "node src/index.js",
     "test": "jest --watch"
   },
   "type": "module",
@@ -17,15 +18,18 @@
     "better-sqlite3": "^8.0.1",
     "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "cron": "^2.3.1",
     "debug": "^4.3.4",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.2",
+    "express-pouchdb": "^4.2.0",
     "express-session": "^1.17.3",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "nano": "^10.1.1",
     "node-pandoc": "^0.3.0",
+    "pouchdb": "^8.0.1",
     "promise-retry": "^2.0.1",
     "redis": "^4.5.1",
     "stripe": "^11.6.0",
